added client information to subscribe and http publish. used for status information.

--- a/js/index.html
+++ b/js/index.html
@@ -32,7 +32,7 @@
         });
 
         $("#btn_subscribe").on("click", function() {
-            postman.subscribe("test");
+            postman.subscribe("test", "JsClientTest");
         });
 
         $("#btn_unsubscribe").on("click", function() {
