feat(index.html): update Postman constructor in index.html to pass additional parameters for improved functionality feat(postman.js): update Postman constructor in postman.js to accept optional parameters for SSL and connectOnClose feat(postman.js): add isConnect method to check if WebSocket connection is open

--- a/js/index.html
+++ b/js/index.html
@@ -12,7 +12,7 @@
         /*
         * postman events
         */
-        let postman = new Postman("127.0.0.1:8800");
+        let postman = new Postman("127.0.0.1:8800", false, true);
         postman.on("pingpong", function() {
             console.log("pong");
         });
